tests/tools/trip/randomTrips/errors/unrecognized_options_to_be_forwarded/errors.tools
usage: randomTrips.py [-h] [-c FILE] [-C FILE] [--save-template FILE] -n
                      NETFILE [-a ADDITIONAL] [-o TRIPFILE] [-r ROUTEFILE]
                      [--vtype-output VTYPEOUT]
                      [--weights-prefix WEIGHTSPREFIX]
                      [--weights-output-prefix WEIGHTS_OUTPREFIX]
                      [--pedestrians] [--persontrips]
                      [--personrides PERSONRIDES]
                      [--persontrip.transfer.car-walk CARWALKMODE]
                      [--persontrip.walkfactor FLOAT]
                      [--persontrip.walk-opposite-factor FLOAT]
                      [--prefix TRIPPREFIX] [-t TRIPATTRS]
                      [--fringe-start-attributes FRINGEATTRS] [-b BEGIN]
                      [-e END] [--random-depart] [-s SEED] [--random] [-l]
                      [-L] [--edge-param EDGEPARAM] [--speed-exponent FLOAT]
                      [--fringe-speed-exponent FLOAT] [--angle ANGLE]
                      [--angle-factor ANGLE_WEIGHT]
                      [--random-factor RANDOMFACTOR]
                      [--fringe-factor FRINGE_FACTOR]
                      [--fringe-threshold FRINGE_THRESHOLD] [--allow-fringe]
                      [--allow-fringe.min-length ALLOW_FRINGE_MIN_LENGTH]
                      [--fringe-junctions] [--min-distance FLOAT]
                      [--min-distance.fringe FLOAT] [--max-distance FLOAT]
                      [-i INTERMEDIATE] [--flows FLOWS] [--jtrrouter]
                      [--maxtries MAXTRIES] [--binomial N] [--vclass VCLASS]
                      [--vehicle-class VEHICLE_CLASS] [--remove-loops]
                      [--random-routing-factor RANDOMROUTINGFACTOR]
                      [--junction-taz] [--via-edge-types VIAEDGETYPES]
                      [--allow-roundabouts] [--validate] [-v]
                      [--random-departpos] [--random-arrivalpos]
                      [-p FLOAT [FLOAT ...] | --insertion-rate FLOAT
                      [FLOAT ...] | --insertion-density FLOAT [FLOAT ...]]
randomTrips.py: error: unrecognized arguments: --foo-bar xyz
